[project]
name = "threaded-order"
dynamic = ["version"]
authors = [
  { name="Emilio Reyes", email="soda480@gmail.com" },
]
description = "A lightweight framework for running functions concurrently across multiple threads while maintaining a defined execution order."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
]

[tool.setuptools]
packages = ["threaded_order"]

[project.urls]
"Homepage" = "https://github.com/soda480/threaded-order"

[project.scripts]
torun = "threaded_order.torun:main"

[project.optional-dependencies]
dev = [
    "build",
    "flake8",
    "mock",
    "radon",
    "bandit",
    "coverage",
    "coverage-badge",
    "twine"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "threaded_order.__version__"}