[project]
name = "threaded-order"
dynamic = ["version"]
authors = [
  { name="Emilio Reyes", email="soda480@gmail.com" },
]
description = "A lightweight framework for running functions concurrently across multiple threads while maintaining a defined execution order."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

dependencies = [
    "colorama"
]

[tool.setuptools]
packages = ["threaded_order"]

[project.urls]
"Homepage" = "https://github.com/soda480/threaded-order"

[project.scripts]
tdrun = "threaded_order.runner:main"

[project.optional-dependencies]
dev = [
    "build",
    "flake8",
    "mock",
    "radon",
    "bandit",
    "coverage",
    "coverage-badge",
    "twine"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "threaded_order.__version__"}